--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
+    "@clerk/clerk-react": "^4.28.0",
+    "@clerk/nextjs": "^4.27.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
